--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <title>PINterest?</title>
 </head>
 <body>
-  
+    <nav class="navbar navbar-light bg-light justify-content-between">
+        <a class="navbar-brand">PINterest</a>
+        <form class="form-inline">
+          <div id="auth"></div>
+        </form>
+      </nav>
 </body>
 </html>
