--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-        <a class="navbar-brand" href="#">Penterest</a>
+        <a class="navbar-brand home-btn" href="#"><i class="fas fa-pen-alt"></i>Penterest</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,6 +24,6 @@
         </div>
       </nav>
 <div id="boards" class="hide"></div>
-
+<div id="pins" class="hide row d-flex justify-content-center"></div>
 </body>
 </html>
