--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
           </ul>
         </div>
       </nav>
+<div id="new-pin" class="hide"></div>
 <div id="boards" class="hide"></div>
 <div id="pins" class="hide row d-flex justify-content-center"></div>
 </body>
