--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <title>PINterest?</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-        <a class="navbar-brand home-btn" href="#"><i class="fas fa-pen-alt"></i>Penterest</a>
+    <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
+        <a class="navbar-brand home-btn" id="home-btn" href="#">Penterest<i class="fas fa-pen-alt"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
             <li>
               <div id="users" class="hide navbar-text"></div>
               <div id="auth" class="hide"></div>
-              <button class="btn btn-outline-danger" id="navbar-logout-button">Logout!</button>
+              <button class="btn btn-outline" id="navbar-logout-button">Logout!</button>
             </li>
           </ul>
         </div>
